# akioi-2048

./: Cargo.toml  README.md  mado.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: actions.rs  board.rs  game.rs  lib.rs
tests/: basic.rs  input_validation.rs  invalid_move.rs  steps.rs
tests/step/: test_merges.py  test_moves.py  test_state.py  test_validation.py
